syntax = "proto3";

import "google/protobuf/timestamp.proto";
option java_package = "org.customer.details";

service FinancialDetails{
     rpc getFinancialDetails(FinancialDetailsRequest) returns (FinancialDetailsResponse);
     rpc setFinancialDetails(FinancialDetailsAdd) returns (FinancialDetailsAddedResponse);
}

message FinancialDetailsRequest{
  int32 customerId=1;
}

message FinancialDetailsResponse{
  string accountId=1;
  int32 customerId=2;
  string accountType=3;
  string accountNumber=4;
  double balance=5;
  string  status=6;
  google.protobuf.Timestamp openDate=7;
}

message FinancialDetailsAdd{
  string accountId=1;
  int32 customerId=2;
  string accountType=3;
  string accountNumber=4;
  double balance=5;
  string  status=6;
  google.protobuf.Timestamp openDate=7;
}

message FinancialDetailsAddedResponse{
  string reponse=1;
}